fix: spacing on conditions

--- a/src/containers/Canvas/Test/TestModal.css
+++ b/src/containers/Canvas/Test/TestModal.css
@@ -36,7 +36,7 @@ td {
     align-items: flex-end;
 }
 .chatbox {
-    height: 400px;
+    height: 40vh;
     width: 100%;
     overflow-y: auto;
     box-sizing: border-box;
