--- a/src/containers/Canvas/Test/TestSidebar.css
+++ b/src/containers/Canvas/Test/TestSidebar.css
@@ -20,8 +20,6 @@
     -webkit-transition: -webkit-transform .3s;
     -moz-transition: -moz-transform .3s;
     transition: transform .3s;
-    overflow-x: hidden;
-    overflow-y: scroll;
 }
 
 #Timeline{
@@ -37,12 +35,12 @@
     -webkit-transition: -webkit-transform .3s;
     -moz-transition: -moz-transform .3s;
     transition: transform .3s;
+    overflow:  hidden;
 }
 
 #TestSidebar label {
     display: inline-block;
     vertical-align: middle;
-    margin-bottom: 10px;
     text-transform: uppercase;
     width: 85%;
     padding-right: 10px;
